Milestone3 Edits