@@ -1,6 +1,6 @@
 #!/bin/bash
 # Convert input to lowercase
-input=$(echo "${2:-ui}" | tr '[:upper:]' '[:lower:]')
+input=$(echo "${2:-client}" | tr '[:upper:]' '[:lower:]')
 port=${3:-3000}  # Default port to 3000 if not 
 # Default debug mode to false
 debug=false
@@ -16,12 +16,12 @@ if $debug; then
 fi
 
 if [ "$input" = "server" ]; then
-    java $debugArg $1.Server.Server $port 
+    java --enable-preview $debugArg $1.Server.Server $port 
 elif [ "$input" = "client" ]; then
-    java $debugArg $1.Client.Client
+    java --enable-preview $debugArg $1.Client.Client
     # In Milestone3 changes Client to ClientUI
 elif [ "$input" = "ui" ]; then
-	java $debugArg $1.Client.ClientUI
+	java --enable-preview $debugArg $1.Client.ClientUI
 	# Milestone 3's new entry point
 else
     echo "Must specify client or server for MS2 or ui or server for MS3"
